--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <footer>
         <p>&copy; 2025 dhrahaya. All rights reserved.</p>
     </footer>
+    <script scr="js\script.js"></script>
 </body>
 
 </html>
