--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="formula-img img-luas"></div>
 
             <p class="pe">Rumus Luas Segitiga:</p>
-            <h4><strong>L = 1/2 x Alas x Tinggi</strong></h4>
+            <h4><strong>L = ½ x Alas x Tinggi</strong></h4>
             <p class="pe">Keterangan :<br>
                L = Luas Segitiga<br>
                Alas = Alas Segitiga<br>
@@ -49,16 +49,16 @@
 
                 <div>
                     <label for="alas">Alas:</label><br>
-                    <input type="number" id="alas" name="alas" placeholder="Masukkan Alas Segitiga">
+                    <input type="number" id="Alas" placeholder="Masukkan Alas Segitiga">
                 </div>
 
                 <div>
                     <label for="tinggi">Tinggi:</label><br>
-                    <input type="number" id="tinggi" name="tinggi" placeholder="Masukkan Tinggi Segitiga">
+                    <input type="number" id="Tinggi" placeholder="Masukkan Tinggi Segitiga">
                 </div>
 
                 <div>
-                    <button>Hitung</button>
+                     <button id="btnLuas" type="button">Hitung</button>
                 </div>
             </form>
         </section>
@@ -88,21 +88,21 @@
 
                 <div>
                     <label for="sisi-a">Sisi A:</label><br>
-                    <input type="number" id="sisi-a" name="sisi-a" placeholder="Masukkan Sisi A">
+                    <input type="number" id="sisi-a" placeholder="Masukkan Sisi A">
                 </div>
 
                 <div>
                     <label for="sisi-b">Sisi B:</label><br>
-                    <input type="number" id="sisi-b" name="sisi-b" placeholder="Masukkan Sisi B">
+                    <input type="number" id="sisi-b" placeholder="Masukkan Sisi B">
                 </div>
 
                 <div>
                     <label for="sisi-c">Sisi C:</label><br>
-                    <input type="number" id="sisi-c" name="sisi-c" placeholder="Masukkan Sisi C">
+                    <input type="number" id="sisi-c" placeholder="Masukkan Sisi C">
                 </div>
 
                 <div>
-                    <button>Hitung</button>
+                    <button id="btnKeliling" type="button">Hitung</button>
                 </div>
             </form>
         </section>
@@ -110,9 +110,10 @@
 
     <!-- Footer Content -->
     <footer>
-        <p>&copy; 2025 dhrahaya. All rights reserved.</p>
+        <p>&copy; 2025 Alya Nuha Shabira Faidh. All rights reserved.</p>
     </footer>
-    <script scr="js\script.js"></script>
+    <!-- JavaScript Internal -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
