--- a/luas.html
+++ b/luas.html
@@ -12,11 +12,11 @@
 
     <!-- Navigation  -->
         <nav>
-            <a class="bg-pink" href="luas.html">Keliling Segitiga</a>
+            <a class="bg-pink" href="luas.html">Beranda</a>
             <br>
             <a class="bg-orange" href="index.html">Luas Segitiga</a>
             <br>
-            <a class="bg-yellow" href="keliling.html">Beranda</a>
+            <a class="bg-yellow" href="keliling.html">Keliling Segitiga</a>
         </nav>
     </header>
 
