--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <!-- Navigation  -->
         <nav>
-            <a class="bg-pink" href="luas.html">Beranda</a>
+            <a class="bg-pink" href="index.html">Beranda</a>
             <br>
-            <a class="bg-orange" href="index.html">Luas Segitiga</a>
+            <a class="bg-orange" href="luas.html">Luas Segitiga</a>
             <br>
             <a class="bg-yellow" href="keliling.html">Keliling Segitiga</a>
         </nav>
