--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+n<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,9 +19,9 @@
         <nav>
             <a class="bg-pink" href="index.html">Beranda</a>
             <br>
-            <a class="bg-orange" href="luas.html">Luas Segitiga</a>
+            <a class="bg-orange" href="keliling.html">Keliling Segitiga</a>
             <br>
-            <a class="bg-yellow" href="keliling.html">Keliling Segitiga</a>
+            <a class="bg-yellow" href="luas.html">Luas Segitiga</a>
         </nav>
     </header>
 
