--- a/keliling.html
+++ b/keliling.html
@@ -14,9 +14,9 @@
         <nav>
             <a class="bg-pink" href="index.html"> Beranda</a>
             <br>
-            <a class="bg-orange" href="luas.html">Luas Segitiga</a>
+            <a class="bg-orange" href="keliling.html">Keliling Segitiga</a>
             <br>
-            <a class="bg-yellow" href="keliling.html">Keliling Segitiga</a>
+            <a class="bg-yellow" href="luas.html">Luas Segitiga</a>
         </nav>
     </header>
 
