--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Welcome to My Thematic</h1>
 
-        <p class="thema">Thematic adalah sebuah website interaktif yang dirancang untuk membantu pengguna menghitung luas dan keliling segitiga secara mudah, cepat, dan akurat. Thematic bertujuan menjadi media bantu belajar dan alat hitung yang praktis, dapat diakses kapan saja melalui perangkat apapun tanpa perlu instalasi aplikasi.</p>
+        <p class="thema">Thematic adalah sebuah website interaktif yang dirancang untuk membantu pengguna menghitung luas dan keliling segitiga secara mudah, cepat, dan akurat. Thematic bertujuan menjadi media bantu belajar dan alat hitung yang praktis, dapat diakses kapan saja melalui perangkat apapun tanpa perlu instalasi aplikasi.</p><br>
 
         <!-- Navigation  -->
         <nav>
